Projects Dropdown added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
                         <li><a href="https://www.linkedin.com/in/adammanleykelly/" target="_blank">LinkedIn</a></li>
                         <li><a href="https://www.credly.com/users/adam-manley-kelly" target="_blank">Credly</a></li>
                         <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
-                        <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
-                        <li><a href="pages/resolver4.html" target="_blank">Resolver</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropbtn">Projects</a>
+                            <ul class="dropdown-content">
+                                <li><a href="pages/resolver4.html" target="_blank">Resolver</a></li>
+                                <li><a href="https://github.com/project2" target="_blank">EvtxWebParse</a></li>
+                                <li><a href="https://github.com/project3" target="_blank">Project 3</a></li>
+                            </ul>
+                        </li>
                         <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
                     </ul>
                 </nav>
