--- a/pages/resolver4.html
+++ b/pages/resolver4.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ResolverV4</title>
+    <title>ResolverV4.5</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -27,7 +27,7 @@
 <body>
     <div class="ui container">
         <br>
-        <h1 class="ui dividing header">Resolver V4</h1>
+        <h1 class="ui dividing header">Resolver V4.5</h1>
         <div class="ui message">
             <p>Enter a list of IP addresses or Drag and Drop a text file containing IP addresses:</p>
         </div>
@@ -68,6 +68,8 @@
         </table>
     </div>
 
+
+<!--Privacy data can only be queried on a standard paid plan-->
     <script>
         // Add a drag and drop event listener to the textarea
         document.getElementById("ipList").addEventListener("drop", function (event) {
@@ -86,99 +88,74 @@
         });
 
             async function lookup() {
-                // Reset the progress variables
-                total = 0;
-                current = 0;
+                let total = 0;
+                let current = 0;
 
-                // Get the API key from the input field
                 const apiKey = document.getElementById("apiKey").value;
+                const ipList = document.getElementById("ipList").value;
+                const ipArray = ipList.split("\n").map(ip => ip.trim());
 
-                // Get the list of IP addresses from the textarea
-                var ipList = document.getElementById("ipList").value;
-
-                // Split the list into an array of individual IP addresses
-                var ipArray = ipList.split("\n");
-
-                total = ipArray.length;
-
-                // Get the Remove RFC1918 checkbox value
                 const removeRFC1918 = document.getElementById("removeRFC1918").checked;
+                const queriedIPs = new Set(); // Set to track already queried IPs
 
-                // Create objects to store counts of countries and registrars
                 const countryCounts = {};
                 const registrarCounts = {};
 
-                // Loop through the array of IP addresses
-                for (var i = 0; i < ipArray.length; i++) {
-                    // Remove leading and trailing whitespace from the IP address
-                    var ip = ipArray[i].trim();
+                // Clear the table except the header row
+                const table = document.getElementById("resultsTable");
+                while (table.rows.length > 1) {
+                    table.deleteRow(1);
+                }
 
-                    // Check if the IP address is an RFC1918 address
-                    if (removeRFC1918 && isRFC1918(ip)) {
-                        // Update the progress bar
+                total = ipArray.length;
+
+                for (const ip of ipArray) {
+                    if (!ip || queriedIPs.has(ip) || (removeRFC1918 && isRFC1918(ip))) {
                         current++;
-                        updateProgressBar();
+                        updateProgressBar(total, current);
                         continue;
                     }
 
-                    try {
-                        // Make a GET request to the ipinfo.io API to get the whois information for the IP address
-                        const response = await fetch("https://ipinfo.io/" + ip + "?token=" + apiKey);
+                    queriedIPs.add(ip); // Mark IP as queried
 
+                    try {
+                        const response = await fetch(`https://ipinfo.io/${ip}?token=${apiKey}`);
                         if (response.ok) {
-                            // Parse the response from the API
                             const whois = await response.json();
 
-                            // Get the IP, registrar, and country from the response
-                            var ip = whois.ip;
-                            var registrar = whois.org;
-                            var country = whois.country;
+                            const registrar = whois.org || "N/A";
+                            const country = whois.country || "Unknown";
 
-                            // Add a row to the results table with the IP, registrar, and country
-                            var table = document.getElementById("resultsTable");
-                            var row = table.insertRow(-1);
-                            var cell1 = row.insertCell(0);
-                            var cell2 = row.insertCell(1);
-                            var cell3 = row.insertCell(2);
-                            cell1.innerHTML = ip;
-                            cell2.innerHTML = registrar;
-                            cell3.innerHTML = country;
+                            addRowToTable(ip, registrar, country);
 
-                            // Update the progress bar
-                            current++;
-                            updateProgressBar();
+                            countryCounts[country] = (countryCounts[country] || 0) + 1;
+                            registrarCounts[registrar] = (registrarCounts[registrar] || 0) + 1;
 
-                            // Update counts of countries and registrars
-                            if (country in countryCounts) {
-                                countryCounts[country]++;
-                            } else {
-                                countryCounts[country] = 1;
-                            }
-
-                            if (registrar in registrarCounts) {
-                                registrarCounts[registrar]++;
-                            } else {
-                                registrarCounts[registrar] = 1;
-                            }
-
-                            // Update the charts
                             updateCountryChart(countryCounts);
                             updateRegistrarChart(registrarCounts);
                         } else {
-                            console.error("Error fetching data: ", response.status, response.statusText);
+                            console.error(`Error fetching data for IP ${ip}:`, response.statusText);
                         }
                     } catch (error) {
-                        console.error("Error during fetch: ", error);
+                        console.error(`Error querying IP ${ip}:`, error);
+                    } finally {
+                        current++;
+                        updateProgressBar(total, current);
                     }
                 }
+
+                makeTableSortable(); // Enable column sorting
+            }
+
+            function addRowToTable(ip, registrar, country) {
+                const table = document.getElementById("resultsTable");
+                const row = table.insertRow(-1);
+                row.insertCell(0).innerText = ip;
+                row.insertCell(1).innerText = registrar;
+                row.insertCell(2).innerText = country;
             }
 
             function isRFC1918(ip) {
-                const ipv4Regex = /^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$/;
-                if (!ipv4Regex.test(ip)) {
-                    return false;
-                }
-
                 const [a, b, c] = ip.split(".").map(Number);
                 return (
                     (a === 10) ||
@@ -187,57 +164,56 @@
                 );
             }
 
-        function updateProgressBar() {
-            // Update the status bar
-            document.getElementById("status").innerHTML = "Looked up " + current + " of " + total + " IP addresses";
-
-            // Check if all IP addresses have been looked up
-            if (current == total) {
-                document.getElementById("status").innerHTML = "Lookup complete";
-            }
-        }
-
-        function updateCountryChart(data) {
-            const ctx = document.getElementById('countryChart').getContext('2d');
-            if (window.countryPieChart) {
-                window.countryPieChart.destroy();
-            }
-            window.countryPieChart = new Chart(ctx, {
-                type: 'pie',
-                data: {
-                    labels: Object.keys(data),
-                    datasets: [{
-                        data: Object.values(data),
-                        backgroundColor: generateColors(Object.keys(data).length)
-                    }]
+            function updateProgressBar(total, current) {
+                const status = document.getElementById("status");
+                status.innerText = `Looked up ${current} of ${total} IP addresses`;
+                if (current === total) {
+                    status.innerText = "Lookup complete";
                 }
-            });
-        }
+            }
 
-        function updateRegistrarChart(data) {
-            const ctx = document.getElementById('registrarChart').getContext('2d');
+            function updateCountryChart(data) {
+                const ctx = document.getElementById('countryChart').getContext('2d');
+                if (window.countryPieChart) {
+                    window.countryPieChart.destroy();
+                }
+                window.countryPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: Object.keys(data),
+                        datasets: [{
+                            data: Object.values(data),
+                            backgroundColor: generateColors(Object.keys(data).length)
+                        }]
+                    }
+                });
+            }
+
+            function updateRegistrarChart(data) {
+                const ctx = document.getElementById('registrarChart').getContext('2d');
                 if (window.registrarPieChart) {
-                window.registrarPieChart.destroy();
-            }
-            window.registrarPieChart = new Chart(ctx, {
-                type: 'pie',
-                data: {
-                    labels: Object.keys(data),
-                    datasets: [{
-                        data: Object.values(data),
-                        backgroundColor: generateColors(Object.keys(data).length)
-                    }]
+                    window.registrarPieChart.destroy();
                 }
-            });
-        }
-
-        function generateColors(numColors) {
-            const colors = [];
-            for (let i = 0; i < numColors; i++) {
-                colors.push('#' + Math.floor(Math.random() * 16777215).toString(16));
+                window.registrarPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: Object.keys(data),
+                        datasets: [{
+                            data: Object.values(data),
+                            backgroundColor: generateColors(Object.keys(data).length)
+                        }]
+                    }
+                });
             }
-            return colors;
-        }
+
+            function generateColors(numColors) {
+                const colors = [];
+                for (let i = 0; i < numColors; i++) {
+                    colors.push('#' + Math.floor(Math.random() * 16777215).toString(16));
+                }
+                return colors;
+            }
+
 
         function exportToCsv() {
             // Get the results table
@@ -261,6 +237,46 @@
             link.download = "whois.csv";
             link.href = "data:text/csv;charset=utf-8," + encodeURI(csvData);
             link.click();
+        }
+
+        function makeTableSortable() {
+            const table = document.getElementById("resultsTable");
+            const headers = table.querySelectorAll("th");
+            const sortState = Array(headers.length).fill(null); // Tracks sort direction for each column
+
+            headers.forEach((header, index) => {
+                header.style.cursor = "pointer"; // Indicate that the column is clickable
+                header.addEventListener("click", () => {
+                    const currentSort = sortState[index];
+                    const newSort = currentSort === "asc" ? "desc" : "asc";
+                    sortState.fill(null); // Reset all other columns' sort states
+                    sortState[index] = newSort; // Update the sort state for this column
+                    sortTableByColumn(table, index, newSort);
+                });
+            });
+        }
+
+        function sortTableByColumn(table, columnIndex, direction) {
+            const rows = Array.from(table.rows).slice(1); // Get all rows except the header row
+            const isNumericColumn = !isNaN(rows[0]?.cells[columnIndex]?.innerText.trim());
+
+            rows.sort((rowA, rowB) => {
+                const cellA = rowA.cells[columnIndex].innerText.trim();
+                const cellB = rowB.cells[columnIndex].innerText.trim();
+
+                if (isNumericColumn) {
+                    return direction === "asc"
+                        ? parseFloat(cellA) - parseFloat(cellB)
+                        : parseFloat(cellB) - parseFloat(cellA);
+                } else {
+                    return direction === "asc"
+                        ? cellA.localeCompare(cellB)
+                        : cellB.localeCompare(cellA);
+                }
+            });
+
+            // Rebuild the table with sorted rows
+            rows.forEach(row => table.tBodies[0].appendChild(row));
         }
     </script>
 </body>
