--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropbtn">Projects</a>
                             <ul class="dropdown-content">
-                                <li><a href="pages/resolver4.html" target="_blank">Resolver</a></li>
+                                <li><a href="pages/Resolver/resolver4.html" target="_blank">Resolver</a></li>
                                 <li><a href="https://github.com/project2" target="_blank">EvtxWebParse</a></li>
                                 <li><a href="https://github.com/project3" target="_blank">Project 3</a></li>
                             </ul>
