Resolver: Final few style edits

--- a/pages/Resolver/index.html
+++ b/pages/Resolver/index.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -63,11 +64,10 @@
             </tbody>
         </table>
     </div>
-    <footer class="footer">
+</body>
+<footer class="footer">
     <p>
         © 2024 <a href="https://adammanleykelly.github.io" target="_blank" class="footer-link">Adam Manley Kelly </a>
     </p>
 </footer>
-</body>
-
 </html>
